--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <iframe id="myIframe" src="https://dls.pussy888auto.club/configOCU/web/"></iframe>
+    <iframe id="myIframe" src="https://dls.pussy888auto.club/configOCU/web3/"></iframe>
     
     <script>
       // Add any additional JavaScript logic here
@@ -36,7 +36,7 @@
       }
       
       // Load the first page by default
-      navigateTo('https://dls.pussy888auto.club/configOCU/web/');
+      navigateTo('https://dls.pussy888auto.club/configOCU/web3/');
     </script>
   </body>
 </html>
